[package]
name = "mruby-sys"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
links = "libmruby"
build = "build.rs"
include = ["vendor/mruby-out.tar", "vendor/wrapper.*"]

[features]
default = ["utf8"]
debug = []
disable-floats = []
disable-stdio = []
disable-generational-gc = []
use-f32 = []
utf8 = []

[dependencies]

[build-dependencies]
cc = "1.0"
tar = "0.4.24"
walkdir = "2.2"
