[package]
name = "mruby-sys"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Raw FFI bindings to mruby"
include = ["vendor/mruby-out.tar", "vendor/wrapper.*"]
edition = "2018"
build = "build.rs"
links = "libmruby"

[features]
default = ["stdio", "utf8"]
debug = []
disable-floats = []
disable-generational-gc = []
stdio = ["libc"]
use-f32 = []
utf8 = []

[dependencies]
libc = { version = "0.2.54", optional = true }

[build-dependencies]
cc = "1.0"
tar = "0.4.24"
walkdir = "2.2"
